fix and add other kind of keywords

--- a/com.radioflex.ide/src/com/radioflex/ide/ui/messages.properties
+++ b/com.radioflex.ide/src/com/radioflex/ide/ui/messages.properties
@@ -2,6 +2,9 @@ TEXTCOLOR_STRING_NAME=String
 TEXTCOLOR_COMMENT_NAME=Comment
 TEXTCOLOR_INSTRUCTION_NAME=Instruction
 TEXTCOLOR_SEGMENT_NAME=Segment
+TEXTCOLOR_MACROS_NAME=Macros
+TEXTCOLOR_DERIVATIVE_NAME=Derivative
+TEXTCOLOR_REGISTER_NAME=Register
 SYNTAXHIGHLIGHT_TITLE=Syntax Highlight for Assembler-Files in Editor.
 FOREGROUNDCOLOR_TEXT=Foreground Color
 COLOR_TEXT=Color
