add changekeywords page

--- a/com.radioflex.ide/src/com/radioflex/ide/ui/messages.properties
+++ b/com.radioflex.ide/src/com/radioflex/ide/ui/messages.properties
@@ -18,3 +18,13 @@ WIZARD_NEW_FILE_PAGE1_TITLE=File
 WIZARD_NEW_FILE_PAGE1_INVALID_FILE=Invalid file name. Must have an extension asm. (e.g. test.asm)
 WIZARD_NEW_PROJECT_DESCRIPTION=Create a new Assembler Project
 LOAD_ASMISET_ERROR=Error while loading ASM Instruction-Set.
+KEYWORD_TITLE=keyword
+KEYWORD_DISCRIPTION=General setting for the highlighting keywords:
+INSTRUCTION_TEXT=instruction
+EDIT_BUTTON_TEXT=Edit
+ADD_BUTTON_TEXT=add
+REMOVE_BUTTON_TEXT=remove
+UPPERCASE_TEXT=uppercase
+LOWERCASE_TEXT=lowercase
+DESCRIPTION_TEXT=description
+KEYWORD_LABEL_TEXT=keyword (the keyword must be uppercase)
