--- a/com.radioflex.ide/src/com/radioflex/ide/ui/messages.properties
+++ b/com.radioflex.ide/src/com/radioflex/ide/ui/messages.properties
@@ -28,3 +28,6 @@ UPPERCASE_TEXT=uppercase
 LOWERCASE_TEXT=lowercase
 DESCRIPTION_TEXT=description
 KEYWORD_LABEL_TEXT=keyword (the keyword must be uppercase)
+
+
+BADLOCATION_ERROR=Error: Bad location.
